--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,7 +3,7 @@
 }
 
 .header {
-    @apply p-10 bg-gray-100 flex flex-row gap-5;
+    @apply p-5 md:p-10 bg-gray-100 flex flex-col md:flex-row gap-5 text-center md:text-left;
 }
 
 .header .linksContainer {
@@ -11,7 +11,7 @@
 }
 
 .main {
-    @apply pl-32 p-10 bg-gray-50 h-full flex flex-grow;
+    @apply mx-auto p-5 md:mx-0 md:pl-32 md:p-10 md:h-full md:flex md:flex-grow bg-gray-50;
 }
 
 .mainContent {
